--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
     </header>
 
     <script src="app.js"></script>
+    
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register("sw.js")
+                .then(registration => {
+                    console.log(registration);
+                })
+                .catch(console.error);
+        }
+    </script>
 </body>
 
 </html>
