--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="Description" content="A PWA boilerplate to build your progressive web apps in.">
     <title>Title</title>
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="navy" />
     <style>
         body {
             margin: 0;
+
             /* Native fonts for all platforms */
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-        }
+            font-family: 
+                system-ui, /* Future proof */
+                -apple-system, BlinkMacSystemFont, /* Safari, Chrome Mac/iOS */
+                "Segoe UI", Roboto, Oxygen, /* Windows, Android, KDE */
+                Ubuntu, Cantarell, "Fira Sans", /* Ubuntu, Gnome, Firefox OS */
+                "Droid Sans", "Helvetica Neue", sans-serif; /* Old Android */        }
 
         main {
             display: flex;
