--- a/src/index.html
+++ b/src/index.html
@@ -14,19 +14,26 @@
             margin: 0;
 
             /* Native fonts for all platforms */
-            font-family: 
-                system-ui, /* Future proof */
-                -apple-system, BlinkMacSystemFont, /* Safari, Chrome Mac/iOS */
-                "Segoe UI", Roboto, Oxygen, /* Windows, Android, KDE */
-                Ubuntu, Cantarell, "Fira Sans", /* Ubuntu, Gnome, Firefox OS */
-                "Droid Sans", "Helvetica Neue", sans-serif; /* Old Android */        }
+            font-family:
+                system-ui,
+                /* Future proof */
+                -apple-system, BlinkMacSystemFont,
+                /* Safari, Chrome Mac/iOS */
+                "Segoe UI", Roboto, Oxygen,
+                /* Windows, Android, KDE */
+                Ubuntu, Cantarell, "Fira Sans",
+                /* Ubuntu, Gnome, Firefox OS */
+                "Droid Sans", "Helvetica Neue", sans-serif;
+            /* Old Android */
+        }
 
         main {
             display: flex;
             overflow-x: scroll;
             -webkit-overflow-scrolling: touch;
-            scroll-snap-type: x mandatory;  
+            scroll-snap-type: x mandatory;
         }
+
         main section {
             position: relative;
             height: 100vh;
@@ -44,6 +51,16 @@
             font-size: 2rem;
             padding: 30px 40px;
         }
+
+        .app-update {
+            display: none;
+            position: absolute;
+            right: 10px;
+        }
+
+        .app-update.show {
+            display: block;
+        }
     </style>
 </head>
 
@@ -59,6 +76,13 @@
                 Page 2
             </header>
         </section>
+
+        <button id="app-update" class="app-update" aria-label="Update">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white">
+                <path fill="none" d="M0 0h24v24H0V0z" />
+                <path d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z" />
+            </svg>
+        </button>
     </main>
 
     <script src="app.js"></script>
