--- a/src/index.html
+++ b/src/index.html
@@ -48,8 +48,12 @@
             top: 0;
             right: 0;
             left: 0;
+            height: 70px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             font-size: 2rem;
-            padding: 30px 40px;
+            font-weight: 600;
         }
 
         .app-update {
