--- a/src/index.html
+++ b/src/index.html
@@ -80,14 +80,12 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: calc(100vh - var(--navbar-height));
+            height: 100vh;
         }
 
         .loading-spinner {
-            animation-duration: 0.75s;
-            animation-iteration-count: infinite;
-            animation-name: rotate-forever;
-            animation-timing-function: linear;
+            display: block;
+            animation: rotate-forever .75s linear infinite;
             height: 30px;
             width: 30px;
             border: 3px solid var(--primary);
@@ -99,9 +97,9 @@
             0% {
                 transform: rotate(0deg);
             }
-
             100% {
                 transform: rotate(360deg);
+                filter:hue-rotate(360deg);
             }
         }
     </style>
@@ -110,12 +108,12 @@
 <body>
     <main>
         <section>
-        <button id="app-update" class="app-update" aria-label="Update">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white">
-                <path fill="none" d="M0 0h24v24H0V0z" />
-                <path d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z" />
-            </svg>
-        </button>
+            <button id="app-update" class="app-update" aria-label="Update">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white">
+                    <path fill="none" d="M0 0h24v24H0V0z" />
+                    <path d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z" />
+                </svg>
+            </button>
             <header>
                 Page 1
             </header>
