--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Description" content="A PWA boilerplate to build your progressive web apps in.">
     <title>Title</title>
-    <link rel="manifest" href="manifest.json" />
-    <meta name="theme-color" content="#2977ff" />
     <style>
         /* app shell CSS */
         :root {
@@ -103,6 +101,13 @@
             }
         }
     </style>
+    <meta name="theme-color" content="#2977ff" /><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="manifest.json" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="navy">
 </head>
 
 <body>
