--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,14 @@
           --dark: #222;
           --navbar-height: 70px;
         }
+
+        .no-select {
+            -ms-user-select: none;
+            -moz-user-select: none;
+            -webkit-user-select: none;
+            user-select: none;
+        }
+
         body {
             margin: 0;
 
@@ -113,13 +121,13 @@
 <body>
     <main>
         <section>
-            <button id="app-update" class="app-update" aria-label="Update">
+            <button id="app-update" class="app-update no-select" aria-label="Update">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="white">
                     <path fill="none" d="M0 0h24v24H0V0z" />
                     <path d="M4 12l1.41 1.41L11 7.83V20h2V7.83l5.58 5.59L20 12l-8-8-8 8z" />
                 </svg>
             </button>
-            <header>
+            <header class="no-select">
                 Page 1
             </header>
             <div class="loading-container">
@@ -127,7 +135,7 @@
             </div>
         </section>
         <section>
-            <header style="background-color: red">
+            <header class="no-select" style="background-color: red">
                 Page 2
             </header>
             <div class="loading-container">
